[package]
name = "rustybolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"]}
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "http"]}
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"]}
lazy_static = "1.4.0"
ndm = "0.9.9"
rand = "0.8.5"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false

